# stock_alert

./: .cruft.json  .sonarcloud.properties  LICENSE  README.md  pyproject.toml  tox.ini
docs/source/: conf.py  index.rst  installation.md  modules.rst  stock_alert.rst
src/stock_alert/: __init__.py  alerts.py  class_stock_alert.py  example_function.py  main.py  quickstart.py  test.py  util.py
tests/: test_alerts.py  test_class_stock_alert.py  test_example_function.py  test_main.py  test_util.py
